# clash-test

./: .env  .env.example  .gitattributes  .gitignore  .replit  Dockerfile  HUGGINGFACE_SPACES.md  Procfile  README-hf.md  README.md  README_WEBUI.md  app.py  app.sh  config.yaml.example  config_cloud.yaml  config_urls.txt  config_urls.txt.example  create_dirs.py  git_steps.txt  gunicorn_config.py  install_deps.py  main.py  ping.py  pyproject.toml  replit.nix  requirements.txt  run_task.py  start.sh  test_file.txt  webui.py  wrangler.toml  wsgi.py  使用说明.md
.github/workflows/: deploy.yml  merge-configs.yml  ping.yml
docs/: README.md  index.html
local_configs/: sample.yaml
scripts/: merge_configs.py
static/css/: style.css
static/js/: main.js
templates/: base.html  config.html  index.html  logs.html  nodes.html  view_file.html
utils/: __init__.py  config_generator.py  github_fetcher.py  latency_tester.py  proxy_merger.py
