[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clash-config-merger"
version = "0.1.0"
description = "Clash配置合并工具"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.3"
flask-cors = "3.0.10"
PyYAML = "6.0"
rich = "13.3.2"
requests = "2.28.2"
gunicorn = "20.1.0"
python-dotenv = "1.0.0"
aiohttp = "3.8.4"
asyncio = "3.4.3" 